--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,3 +348,16 @@ td, th {
   padding-bottom: 5px;
 }
 
+.page-host {
+  padding-top: 50px;
+}
+
+.navbar .navbar-brand img {
+  height: 125%;
+}
+
+.navbar-chat {
+  margin-top: 7px;
+  color: #888888;
+  font-size: 16px !important;
+}
